Numbering in Thm 5.24

--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -2559,12 +2559,12 @@ Then, for $n\geq1$ we prove that,
 \end{enumerate}
 We prove $(a)$, the proof of $(b)$ proceeds similarly. 
 Let $j_n$ be the leftmost element of $J\setminus \{j_1,...,j_{n-1} \}$ in $\tau$.
-Suppose that $w\neq j_n$, then either $w$ consists of multiple elements of $J$ including $j_n$, or $j_n$ comes after $i_n$ in $\sigma$.
-Let $(I',J') \eqdef (I_k\setminus \{i_n\}, J_k \setminus \{j_n\})$.
+Suppose that $w\neq j_n$, then either (i) $w$ consists of multiple elements of $J$ including $j_n$, or (ii) $j_n$ comes after $i_n$ in $\sigma$.
+Now consider the pair $(I',J') \eqdef (I_k\setminus \{i_n\}, J_k \setminus \{j_n\})$.
 As was the case for the proof that $i_1=1$, we have that $I'$ dominate $J'$ in $\tau$.
 To prove that $J'$ dominates $I'$ in $\sigma$, we split by the cases.
-In case $(a)$, we may apply condition $(2)$ of \cref{lem:Coherent Domination}.
-In case $(b)$, either $i_n$ comes before $j_n$, in which case we meet condition $(1)$ of \cref{lem:Coherent Domination}, or $j_n$ comes before $i_n$.
+In case (i), we may apply condition $(2)$ of \cref{lem:Coherent Domination}.
+In case (ii), either $i_n$ comes before $j_n$, in which case we meet condition $(1)$ of \cref{lem:Coherent Domination}, or $j_n$ comes before $i_n$.
 In this last situation, we have that condition $(2)$ of \cref{lem:Coherent Domination} holds as $i_n$ is the leftmost element of $I\setminus \{i_1,...,i_{n-1} \}$ in $\sigma$.
 Thus, if $w \neq j_n$, we can apply the induction hypothesis. 
 
