--- a/paper/diagonalsPermutahedra.bib
+++ b/paper/diagonalsPermutahedra.bib
@@ -361,3 +361,14 @@
   pages = {49--139},
   fjournal = {Annals of Mathematics. Second Series}
 }
+
+@article{MarklShnider06,
+  title = {Associahedra, Cellular {{W-construction}} and Products of {{A}}{\textsubscript{{$\infty$}}}-Algebras},
+  author = {Markl, Martin and Shnider, Steve},
+  year = {2006},
+  journal = {Transactions of the American Mathematical Society},
+  volume = {358},
+  number = {6},
+  pages = {2353--2372 (electronic)},
+  fjournal = {Transactions of the American Mathematical Society}
+}
